--- a/main/language/mm.json
+++ b/main/language/mm.json
@@ -14,7 +14,7 @@
     "read":"ဖတ်မယ်",
     "email":"အီးမေးလ်",
     "password":"လျှိုဝှက်ကုဒ်",
-    "login":"အကောင့်ဝင်မည်",
+    "login":"ဝင်မည်",
     "sign_up":"အကောင့်ဖွင့်ရန်",
     "forgot_ur_password":"လျှိုဝှက်ကုဒ် မေ့သွားပါသဖြင့်",
     "keep_me_logged_in": "မှတ်ထားမည်",
@@ -32,6 +32,10 @@
     "otp_sent_to":"OTP ကုဒ်ပို့ထားသောအီးမေးလ် ",
     "please_wait":"ခတ္တခဏစောင့်ပါ ",
     "resend_otp":"OTP ကုဒ်ထပ်ပို့မယ်",
-    "seconds": " စက္ကန့်"
+    "seconds": " စက္ကန့်",
+    "old_password": "လျှိုဝှက်ကုဒ်အဟောင်း",
+    "new_password":"လျှိုဝှက်ကုဒ်အသစ်",
+    "repeat_new_password": "လျှိုဝှက်ကုဒ်အသစ်ထပ်ရိုက်ပါ",
+    "success":"အောင်မြင်ပါသည်"
     
 }
