--- a/main/language/mm.json
+++ b/main/language/mm.json
@@ -36,6 +36,7 @@
     "old_password": "လျှိုဝှက်ကုဒ်အဟောင်း",
     "new_password":"လျှိုဝှက်ကုဒ်အသစ်",
     "repeat_new_password": "လျှိုဝှက်ကုဒ်အသစ်ထပ်ရိုက်ပါ",
-    "success":"အောင်မြင်ပါသည်"
+    "success":"အောင်မြင်ပါသည်",
+    "enter_your_email": "သင်၏အီးမေးလ်ရိုက်ထည့်ပါ"
     
 }
