--- a/main/language/en.json
+++ b/main/language/en.json
@@ -2,13 +2,17 @@
     "view_more":"View more",
     "your_fav":"Your Favourite",
     "books":"Books",
+    "book":"Book",
     "lyrics":"Lyrics",
+    "lyric":"Lyric",
     "language":"Language",
     "change_password":"Change Password",
     "logout":"Logout",
     "singers":"Singers",
+    "singer":"Singer",
     "book_authors":"Authors",
     "albums":"Albums",
+    "album":"Album",
     "authors":"Authors",
     "author":"Author",
     "read":"Read",
@@ -37,6 +41,8 @@
     "new_password":"New Password",
     "repeat_new_password": "Repeat your new password",
     "success":"Success",
-    "enter_your_email": "Enter yor email below"
+    "enter_your_email": "Enter yor email below",
+    "search_lyric_text": "Search Lyric",
+    "search_book_text": "Search Book"
 
 }
