--- a/main/language/mm.json
+++ b/main/language/mm.json
@@ -2,13 +2,17 @@
     "view_more":"ပိုမိုကြည့်ရှုရန်",
     "your_fav":"သင်ကြိုက်နှစ်သက်သော်",
     "books":"စာအုပ်များ",
+    "book":"စာအုပ်",
     "lyrics":"သီချင်းစာသားများ",
+    "lyric":"သီချင်းစာသား",
     "language":"ဘာသာစကား",
     "change_password":"လျှိုဝှက်ကုဒ် ပြောင်းရန်",
     "logout":"ထွက်မည်",
     "singers":"အဆိုတော်များ",
+    "singer":"အဆိုတော်",
     "book_authors":"စာရေးဆရာများ",
     "albums":"အယ်လ်ဘမ်များ",
+    "album":"အယ်လ်ဘမ်",
     "authors":"စာရေးဆရာများ",
     "author":"စာရေးဆရာ",
     "read":"ဖတ်မယ်",
@@ -37,6 +41,8 @@
     "new_password":"လျှိုဝှက်ကုဒ်အသစ်",
     "repeat_new_password": "လျှိုဝှက်ကုဒ်အသစ်ထပ်ရိုက်ပါ",
     "success":"အောင်မြင်ပါသည်",
-    "enter_your_email": "သင်၏အီးမေးလ်ရိုက်ထည့်ပါ"
+    "enter_your_email": "သင်၏အီးမေးလ်ရိုက်ထည့်ပါ",
+    "search_lyric_text": "သီးချင်းရှာရန်",
+    "search_book_text": "စာအုပ်ရှာရန်"
     
 }
