--- a/main/language/mm.json
+++ b/main/language/mm.json
@@ -43,6 +43,7 @@
     "success":"အောင်မြင်ပါသည်",
     "enter_your_email": "သင်၏အီးမေးလ်ရိုက်ထည့်ပါ",
     "search_lyric_text": "သီးချင်းရှာရန်",
-    "search_book_text": "စာအုပ်ရှာရန်"
+    "search_book_text": "စာအုပ်ရှာရန်",
+    "reset_password": "လျှိုဝှက်ကုဒ်အသစ်လုပ်ရန်"
     
 }
