--- a/main/language/mm.json
+++ b/main/language/mm.json
@@ -1,6 +1,6 @@
 {
     "view_more":"ပိုမိုကြည့်ရှုရန်",
-    "your_fav":"သင်ကြိုက်နှစ်သက်သော်",
+    "your_fav":"သင်ကြိုက်နှစ်သက်သော",
     "books":"စာအုပ်များ",
     "book":"စာအုပ်",
     "lyrics":"သီချင်းစာသားများ",
@@ -23,8 +23,8 @@
     "forgot_ur_password":"လျှိုဝှက်ကုဒ် မေ့သွားပါသဖြင့်",
     "keep_me_logged_in": "မှတ်ထားမည်",
     "not_a_memeber": "အဖွဲ့ဝင်မဟုတ်ပါသလား?",
-    "fav_book_list": "သင်ကြိုက်နှစ်သက်သော်စာအုပ်များ",
-    "fav_lyric_list": "သင်ကြိုက်နှစ်သက်သော်သီချင်းစာသားများ",
+    "fav_book_list": "သင်ကြိုက်နှစ်သက်သောစာအုပ်များ",
+    "fav_lyric_list": "သင်ကြိုက်နှစ်သက်သောသီချင်းစာသားများ",
     "page_number":"စာမျက်နှာနံပါတ်",
     "go":"သွားမည်",
     "go_to_bookmark_page":"မှတ်ထားသောစာမျက်နှာသို့သွားမည်",
