[Fixed] responsive screen

--- a/main/language/mm.json
+++ b/main/language/mm.json
@@ -25,7 +25,7 @@
     "not_a_memeber": "အဖွဲ့ဝင်မဟုတ်ပါသလား?",
     "fav_book_list": "သင်ကြိုက်နှစ်သက်သောစာအုပ်များ",
     "fav_lyric_list": "သင်ကြိုက်နှစ်သက်သောသီချင်းစာသားများ",
-    "page_number":"စာမျက်နှာနံပါတ်",
+    "page_number":"စာမျက်နှာ",
     "go":"သွားမည်",
     "go_to_bookmark_page":"မှတ်ထားသောစာမျက်နှာသို့သွားမည်",
     "bookmark_page_at": "မှတ်ထားသောစာမျက်နှာ",
