[Added] activated screen saver

--- a/main/language/en.json
+++ b/main/language/en.json
@@ -25,7 +25,7 @@
     "not_a_memeber": "Not a member?",
     "fav_book_list": "Your Favourite Books",
     "fav_lyric_list": "Your Favourite Lyrics",
-    "page_number":"Page number",
+    "page_number":"Page",
     "go":"Go",
     "go_to_bookmark_page":"Go to bookmark page",
     "bookmark_page_at": "Bookmark page at",
