--- a/main/language/mm.json
+++ b/main/language/mm.json
@@ -44,6 +44,10 @@
     "enter_your_email": "သင်၏အီးမေးလ်ရိုက်ထည့်ပါ",
     "search_lyric_text": "သီးချင်းရှာရန်",
     "search_book_text": "စာအုပ်ရှာရန်",
-    "reset_password": "လျှိုဝှက်ကုဒ်အသစ်လုပ်ရန်"
-    
+    "reset_password": "လျှိုဝှက်ကုဒ်အသစ်လုပ်ရန်",
+    "delete_account":"အကောင့်ဖျက်ရန်",
+    "deleting_account":"အကောင့်ဖျက်မည်",
+    "delete_description":"သင့်အကောင့်ကို ဖျက်ခြင်းသည် သင့်အချက်အလက်အားလုံးကို ကျွန်ုပ်တို့၏စနစ်မှ ဖယ်ရှားမည်ဖြစ်သည်။ ဒါကို ပြန်ပြင်လို့ မရပါ။",
+    "confirm_delete":"၎င်းကိုအတည်ပြုရန် 'DELETE' ဟုရိုက်ထည့်ပါ။",
+    "delete":"အကောင့်ဖျက်မည်"
 }
